--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@
 
 .chart {
   width: 100%;
-  height: 600px;
+  height: 550px;
 }
 
 .test-list {
@@ -23,4 +23,21 @@
 .test {
   width: 100%;
   max-width: 90%;
+}
+
+.replay-controls {
+  margin-top: 10px;
+}
+
+.replay-button, .replay-button-placeholder {
+  margin: 6px;
+  font-size: 150%;
+}
+
+.replay-button-placeholder {
+  visibility: hidden;
+}
+
+.replay-button:hover {
+  cursor: pointer;
 }
