--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+code {
+  padding: 0.2em 0.4em;
+  margin: 0;
+  font-size: 95%;
+  background: #e8eeff;
+  border-radius: 4px;
+}
