Create Interactive graph using Bitempura Wasm target (#31)
* add build-wasm Make target
* update site description
* just directly import go wasm setup through html
* remove lingering console.log
* add proof of concept for Wasm-powered interactive mode
* pin to specific revision of bitempura memory/wasm
* style the /interactive page
* set up on change callback
* make the chart delta range configurable
* fix /interactive styling. add sleep so that wasm module loads before component mounts

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+code {
+  margin: 0;
+  padding: 0.2em 0.4em;
+  font-family: "Courier New";
+  font-size: 90%;
+  font-weight: bold;
+  background: #e8eeff;
+  border-radius: 4px;
+}
