make /interactive available from home page. clean up styles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,7 @@
 
 .replay-button, .replay-button-placeholder {
   margin: 6px;
-  font-size: 150%;
+  font-size: 1.17em;
 }
 
 .replay-button-placeholder {
